APIs/googleapis.com/androidpublisher/v3/javascript-client/README.md
# google_play_android_developer_api

GooglePlayAndroidDeveloperApi - JavaScript client for google_play_android_developer_api
Lets Android application developers access their Google Play accounts. At a high level, the expected workflow is to \"insert\" an Edit, make changes as necessary, and then \"commit\" it. 
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v3
- Package version: v3
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install google_play_android_developer_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your google_play_android_developer_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var GooglePlayAndroidDeveloperApi = require('google_play_android_developer_api');

var defaultClient = GooglePlayAndroidDeveloperApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new GooglePlayAndroidDeveloperApi.ApplicationsApi()
var packageName = "packageName_example"; // {String} Required. Package name of the app.
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'safetyLabelsUpdateRequest': new GooglePlayAndroidDeveloperApi.SafetyLabelsUpdateRequest() // {SafetyLabelsUpdateRequest} 
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.androidpublisherApplicationsDataSafety(packageName, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://androidpublisher.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*GooglePlayAndroidDeveloperApi.ApplicationsApi* | [**androidpublisherApplicationsDataSafety**](docs/ApplicationsApi.md#androidpublisherApplicationsDataSafety) | **POST** /androidpublisher/v3/applications/{packageName}/dataSafety | 
*GooglePlayAndroidDeveloperApi.ApplicationsApi* | [**androidpublisherApplicationsDeviceTierConfigsCreate**](docs/ApplicationsApi.md#androidpublisherApplicationsDeviceTierConfigsCreate) | **POST** /androidpublisher/v3/applications/{packageName}/deviceTierConfigs | 
*GooglePlayAndroidDeveloperApi.ApplicationsApi* | [**androidpublisherApplicationsDeviceTierConfigsGet**](docs/ApplicationsApi.md#androidpublisherApplicationsDeviceTierConfigsGet) | **GET** /androidpublisher/v3/applications/{packageName}/deviceTierConfigs/{deviceTierConfigId} | 
*GooglePlayAndroidDeveloperApi.ApplicationsApi* | [**androidpublisherApplicationsDeviceTierConfigsList**](docs/ApplicationsApi.md#androidpublisherApplicationsDeviceTierConfigsList) | **GET** /androidpublisher/v3/applications/{packageName}/deviceTierConfigs | 
*GooglePlayAndroidDeveloperApi.ApprecoveryApi* | [**androidpublisherApprecoveryAddTargeting**](docs/ApprecoveryApi.md#androidpublisherApprecoveryAddTargeting) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries/{appRecoveryId}:addTargeting | 
*GooglePlayAndroidDeveloperApi.ApprecoveryApi* | [**androidpublisherApprecoveryCancel**](docs/ApprecoveryApi.md#androidpublisherApprecoveryCancel) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries/{appRecoveryId}:cancel | 
*GooglePlayAndroidDeveloperApi.ApprecoveryApi* | [**androidpublisherApprecoveryCreate**](docs/ApprecoveryApi.md#androidpublisherApprecoveryCreate) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries | 
*GooglePlayAndroidDeveloperApi.ApprecoveryApi* | [**androidpublisherApprecoveryDeploy**](docs/ApprecoveryApi.md#androidpublisherApprecoveryDeploy) | **POST** /androidpublisher/v3/applications/{packageName}/appRecoveries/{appRecoveryId}:deploy | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsApksAddexternallyhosted**](docs/EditsApi.md#androidpublisherEditsApksAddexternallyhosted) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/externallyHosted | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsApksList**](docs/EditsApi.md#androidpublisherEditsApksList) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsApksUpload**](docs/EditsApi.md#androidpublisherEditsApksUpload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsBundlesList**](docs/EditsApi.md#androidpublisherEditsBundlesList) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/bundles | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsBundlesUpload**](docs/EditsApi.md#androidpublisherEditsBundlesUpload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/bundles | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsCommit**](docs/EditsApi.md#androidpublisherEditsCommit) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}:commit | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsCountryavailabilityGet**](docs/EditsApi.md#androidpublisherEditsCountryavailabilityGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/countryAvailability/{track} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsDelete**](docs/EditsApi.md#androidpublisherEditsDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsDeobfuscationfilesUpload**](docs/EditsApi.md#androidpublisherEditsDeobfuscationfilesUpload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/deobfuscationFiles/{deobfuscationFileType} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsDetailsGet**](docs/EditsApi.md#androidpublisherEditsDetailsGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/details | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsDetailsPatch**](docs/EditsApi.md#androidpublisherEditsDetailsPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/details | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsDetailsUpdate**](docs/EditsApi.md#androidpublisherEditsDetailsUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/details | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsExpansionfilesGet**](docs/EditsApi.md#androidpublisherEditsExpansionfilesGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsExpansionfilesPatch**](docs/EditsApi.md#androidpublisherEditsExpansionfilesPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsExpansionfilesUpdate**](docs/EditsApi.md#androidpublisherEditsExpansionfilesUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsExpansionfilesUpload**](docs/EditsApi.md#androidpublisherEditsExpansionfilesUpload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/apks/{apkVersionCode}/expansionFiles/{expansionFileType} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsGet**](docs/EditsApi.md#androidpublisherEditsGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsImagesDelete**](docs/EditsApi.md#androidpublisherEditsImagesDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType}/{imageId} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsImagesDeleteall**](docs/EditsApi.md#androidpublisherEditsImagesDeleteall) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsImagesList**](docs/EditsApi.md#androidpublisherEditsImagesList) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsImagesUpload**](docs/EditsApi.md#androidpublisherEditsImagesUpload) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language}/{imageType} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsInsert**](docs/EditsApi.md#androidpublisherEditsInsert) | **POST** /androidpublisher/v3/applications/{packageName}/edits | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsListingsDelete**](docs/EditsApi.md#androidpublisherEditsListingsDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsListingsDeleteall**](docs/EditsApi.md#androidpublisherEditsListingsDeleteall) | **DELETE** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsListingsGet**](docs/EditsApi.md#androidpublisherEditsListingsGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsListingsList**](docs/EditsApi.md#androidpublisherEditsListingsList) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsListingsPatch**](docs/EditsApi.md#androidpublisherEditsListingsPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsListingsUpdate**](docs/EditsApi.md#androidpublisherEditsListingsUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/listings/{language} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsTestersGet**](docs/EditsApi.md#androidpublisherEditsTestersGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/testers/{track} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsTestersPatch**](docs/EditsApi.md#androidpublisherEditsTestersPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/testers/{track} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsTestersUpdate**](docs/EditsApi.md#androidpublisherEditsTestersUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/testers/{track} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsTracksCreate**](docs/EditsApi.md#androidpublisherEditsTracksCreate) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsTracksGet**](docs/EditsApi.md#androidpublisherEditsTracksGet) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks/{track} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsTracksList**](docs/EditsApi.md#androidpublisherEditsTracksList) | **GET** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsTracksPatch**](docs/EditsApi.md#androidpublisherEditsTracksPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks/{track} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsTracksUpdate**](docs/EditsApi.md#androidpublisherEditsTracksUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/edits/{editId}/tracks/{track} | 
*GooglePlayAndroidDeveloperApi.EditsApi* | [**androidpublisherEditsValidate**](docs/EditsApi.md#androidpublisherEditsValidate) | **POST** /androidpublisher/v3/applications/{packageName}/edits/{editId}:validate | 
*GooglePlayAndroidDeveloperApi.ExternaltransactionsApi* | [**androidpublisherExternaltransactionsCreateexternaltransaction**](docs/ExternaltransactionsApi.md#androidpublisherExternaltransactionsCreateexternaltransaction) | **POST** /androidpublisher/v3/{parent}/externalTransactions | 
*GooglePlayAndroidDeveloperApi.ExternaltransactionsApi* | [**androidpublisherExternaltransactionsGetexternaltransaction**](docs/ExternaltransactionsApi.md#androidpublisherExternaltransactionsGetexternaltransaction) | **GET** /androidpublisher/v3/{name} | 
*GooglePlayAndroidDeveloperApi.ExternaltransactionsApi* | [**androidpublisherExternaltransactionsRefundexternaltransaction**](docs/ExternaltransactionsApi.md#androidpublisherExternaltransactionsRefundexternaltransaction) | **POST** /androidpublisher/v3/{name}:refund | 
*GooglePlayAndroidDeveloperApi.GeneratedapksApi* | [**androidpublisherGeneratedapksDownload**](docs/GeneratedapksApi.md#androidpublisherGeneratedapksDownload) | **GET** /androidpublisher/v3/applications/{packageName}/generatedApks/{versionCode}/downloads/{downloadId}:download | 
*GooglePlayAndroidDeveloperApi.GeneratedapksApi* | [**androidpublisherGeneratedapksList**](docs/GeneratedapksApi.md#androidpublisherGeneratedapksList) | **GET** /androidpublisher/v3/applications/{packageName}/generatedApks/{versionCode} | 
*GooglePlayAndroidDeveloperApi.GrantsApi* | [**androidpublisherGrantsCreate**](docs/GrantsApi.md#androidpublisherGrantsCreate) | **POST** /androidpublisher/v3/{parent}/grants | 
*GooglePlayAndroidDeveloperApi.InappproductsApi* | [**androidpublisherInappproductsBatchDelete**](docs/InappproductsApi.md#androidpublisherInappproductsBatchDelete) | **POST** /androidpublisher/v3/applications/{packageName}/inappproducts:batchDelete | 
*GooglePlayAndroidDeveloperApi.InappproductsApi* | [**androidpublisherInappproductsBatchGet**](docs/InappproductsApi.md#androidpublisherInappproductsBatchGet) | **GET** /androidpublisher/v3/applications/{packageName}/inappproducts:batchGet | 
*GooglePlayAndroidDeveloperApi.InappproductsApi* | [**androidpublisherInappproductsBatchUpdate**](docs/InappproductsApi.md#androidpublisherInappproductsBatchUpdate) | **POST** /androidpublisher/v3/applications/{packageName}/inappproducts:batchUpdate | 
*GooglePlayAndroidDeveloperApi.InappproductsApi* | [**androidpublisherInappproductsDelete**](docs/InappproductsApi.md#androidpublisherInappproductsDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*GooglePlayAndroidDeveloperApi.InappproductsApi* | [**androidpublisherInappproductsGet**](docs/InappproductsApi.md#androidpublisherInappproductsGet) | **GET** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*GooglePlayAndroidDeveloperApi.InappproductsApi* | [**androidpublisherInappproductsInsert**](docs/InappproductsApi.md#androidpublisherInappproductsInsert) | **POST** /androidpublisher/v3/applications/{packageName}/inappproducts | 
*GooglePlayAndroidDeveloperApi.InappproductsApi* | [**androidpublisherInappproductsList**](docs/InappproductsApi.md#androidpublisherInappproductsList) | **GET** /androidpublisher/v3/applications/{packageName}/inappproducts | 
*GooglePlayAndroidDeveloperApi.InappproductsApi* | [**androidpublisherInappproductsPatch**](docs/InappproductsApi.md#androidpublisherInappproductsPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*GooglePlayAndroidDeveloperApi.InappproductsApi* | [**androidpublisherInappproductsUpdate**](docs/InappproductsApi.md#androidpublisherInappproductsUpdate) | **PUT** /androidpublisher/v3/applications/{packageName}/inappproducts/{sku} | 
*GooglePlayAndroidDeveloperApi.InternalappsharingartifactsApi* | [**androidpublisherInternalappsharingartifactsUploadapk**](docs/InternalappsharingartifactsApi.md#androidpublisherInternalappsharingartifactsUploadapk) | **POST** /androidpublisher/v3/applications/internalappsharing/{packageName}/artifacts/apk | 
*GooglePlayAndroidDeveloperApi.InternalappsharingartifactsApi* | [**androidpublisherInternalappsharingartifactsUploadbundle**](docs/InternalappsharingartifactsApi.md#androidpublisherInternalappsharingartifactsUploadbundle) | **POST** /androidpublisher/v3/applications/internalappsharing/{packageName}/artifacts/bundle | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationConvertRegionPrices**](docs/MonetizationApi.md#androidpublisherMonetizationConvertRegionPrices) | **POST** /androidpublisher/v3/applications/{packageName}/pricing:convertRegionPrices | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsArchive**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsArchive) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}:archive | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansActivate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansActivate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}:activate | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansBatchMigratePrices**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansBatchMigratePrices) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans:batchMigratePrices | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansBatchUpdateStates**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansBatchUpdateStates) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans:batchUpdateStates | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansDeactivate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansDeactivate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}:deactivate | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansDelete**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId} | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansMigratePrices**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansMigratePrices) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}:migratePrices | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersActivate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersActivate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId}:activate | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersBatchGet**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersBatchGet) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers:batchGet | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersBatchUpdate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersBatchUpdate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers:batchUpdate | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersBatchUpdateStates**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersBatchUpdateStates) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers:batchUpdateStates | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersCreate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersCreate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersDeactivate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersDeactivate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId}:deactivate | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersDelete**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId} | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersGet**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersGet) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId} | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersList**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersList) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBasePlansOffersPatch**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBasePlansOffersPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId}/basePlans/{basePlanId}/offers/{offerId} | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBatchGet**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBatchGet) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions:batchGet | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsBatchUpdate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsBatchUpdate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions:batchUpdate | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsCreate**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsCreate) | **POST** /androidpublisher/v3/applications/{packageName}/subscriptions | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsDelete**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsDelete) | **DELETE** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId} | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsGet**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsGet) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId} | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsList**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsList) | **GET** /androidpublisher/v3/applications/{packageName}/subscriptions | 
*GooglePlayAndroidDeveloperApi.MonetizationApi* | [**androidpublisherMonetizationSubscriptionsPatch**](docs/MonetizationApi.md#androidpublisherMonetizationSubscriptionsPatch) | **PATCH** /androidpublisher/v3/applications/{packageName}/subscriptions/{productId} | 
*GooglePlayAndroidDeveloperApi.OrdersApi* | [**androidpublisherOrdersRefund**](docs/OrdersApi.md#androidpublisherOrdersRefund) | **POST** /androidpublisher/v3/applications/{packageName}/orders/{orderId}:refund | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesProductsAcknowledge**](docs/PurchasesApi.md#androidpublisherPurchasesProductsAcknowledge) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/products/{productId}/tokens/{token}:acknowledge | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesProductsConsume**](docs/PurchasesApi.md#androidpublisherPurchasesProductsConsume) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/products/{productId}/tokens/{token}:consume | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesProductsGet**](docs/PurchasesApi.md#androidpublisherPurchasesProductsGet) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/products/{productId}/tokens/{token} | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsAcknowledge**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsAcknowledge) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:acknowledge | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsCancel**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsCancel) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:cancel | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsDefer**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsDefer) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:defer | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsGet**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsGet) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token} | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsRefund**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsRefund) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:refund | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsRevoke**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsRevoke) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptions/{subscriptionId}/tokens/{token}:revoke | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsv2Get**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsv2Get) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/subscriptionsv2/tokens/{token} | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesSubscriptionsv2Revoke**](docs/PurchasesApi.md#androidpublisherPurchasesSubscriptionsv2Revoke) | **POST** /androidpublisher/v3/applications/{packageName}/purchases/subscriptionsv2/tokens/{token}:revoke | 
*GooglePlayAndroidDeveloperApi.PurchasesApi* | [**androidpublisherPurchasesVoidedpurchasesList**](docs/PurchasesApi.md#androidpublisherPurchasesVoidedpurchasesList) | **GET** /androidpublisher/v3/applications/{packageName}/purchases/voidedpurchases | 
*GooglePlayAndroidDeveloperApi.ReviewsApi* | [**androidpublisherReviewsGet**](docs/ReviewsApi.md#androidpublisherReviewsGet) | **GET** /androidpublisher/v3/applications/{packageName}/reviews/{reviewId} | 
*GooglePlayAndroidDeveloperApi.ReviewsApi* | [**androidpublisherReviewsList**](docs/ReviewsApi.md#androidpublisherReviewsList) | **GET** /androidpublisher/v3/applications/{packageName}/reviews | 
*GooglePlayAndroidDeveloperApi.ReviewsApi* | [**androidpublisherReviewsReply**](docs/ReviewsApi.md#androidpublisherReviewsReply) | **POST** /androidpublisher/v3/applications/{packageName}/reviews/{reviewId}:reply | 
*GooglePlayAndroidDeveloperApi.SystemapksApi* | [**androidpublisherSystemapksVariantsCreate**](docs/SystemapksApi.md#androidpublisherSystemapksVariantsCreate) | **POST** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants | 
*GooglePlayAndroidDeveloperApi.SystemapksApi* | [**androidpublisherSystemapksVariantsDownload**](docs/SystemapksApi.md#androidpublisherSystemapksVariantsDownload) | **GET** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants/{variantId}:download | 
*GooglePlayAndroidDeveloperApi.SystemapksApi* | [**androidpublisherSystemapksVariantsGet**](docs/SystemapksApi.md#androidpublisherSystemapksVariantsGet) | **GET** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants/{variantId} | 
*GooglePlayAndroidDeveloperApi.SystemapksApi* | [**androidpublisherSystemapksVariantsList**](docs/SystemapksApi.md#androidpublisherSystemapksVariantsList) | **GET** /androidpublisher/v3/applications/{packageName}/systemApks/{versionCode}/variants | 
*GooglePlayAndroidDeveloperApi.UsersApi* | [**androidpublisherUsersCreate**](docs/UsersApi.md#androidpublisherUsersCreate) | **POST** /androidpublisher/v3/{parent}/users | 
*GooglePlayAndroidDeveloperApi.UsersApi* | [**androidpublisherUsersDelete**](docs/UsersApi.md#androidpublisherUsersDelete) | **DELETE** /androidpublisher/v3/{name} | 
*GooglePlayAndroidDeveloperApi.UsersApi* | [**androidpublisherUsersList**](docs/UsersApi.md#androidpublisherUsersList) | **GET** /androidpublisher/v3/{parent}/users | 
*GooglePlayAndroidDeveloperApi.UsersApi* | [**androidpublisherUsersPatch**](docs/UsersApi.md#androidpublisherUsersPatch) | **PATCH** /androidpublisher/v3/{name} | 


## Documentation for Models

 - [GooglePlayAndroidDeveloperApi.Abi](docs/Abi.md)
 - [GooglePlayAndroidDeveloperApi.AbiTargeting](docs/AbiTargeting.md)
 - [GooglePlayAndroidDeveloperApi.AcquisitionTargetingRule](docs/AcquisitionTargetingRule.md)
 - [GooglePlayAndroidDeveloperApi.ActivateBasePlanRequest](docs/ActivateBasePlanRequest.md)
 - [GooglePlayAndroidDeveloperApi.ActivateSubscriptionOfferRequest](docs/ActivateSubscriptionOfferRequest.md)
 - [GooglePlayAndroidDeveloperApi.AddTargetingRequest](docs/AddTargetingRequest.md)
 - [GooglePlayAndroidDeveloperApi.AllUsers](docs/AllUsers.md)
 - [GooglePlayAndroidDeveloperApi.AndroidSdks](docs/AndroidSdks.md)
 - [GooglePlayAndroidDeveloperApi.Apk](docs/Apk.md)
 - [GooglePlayAndroidDeveloperApi.ApkBinary](docs/ApkBinary.md)
 - [GooglePlayAndroidDeveloperApi.ApkDescription](docs/ApkDescription.md)
 - [GooglePlayAndroidDeveloperApi.ApkSet](docs/ApkSet.md)
 - [GooglePlayAndroidDeveloperApi.ApkTargeting](docs/ApkTargeting.md)
 - [GooglePlayAndroidDeveloperApi.ApksAddExternallyHostedRequest](docs/ApksAddExternallyHostedRequest.md)
 - [GooglePlayAndroidDeveloperApi.ApksAddExternallyHostedResponse](docs/ApksAddExternallyHostedResponse.md)
 - [GooglePlayAndroidDeveloperApi.ApksListResponse](docs/ApksListResponse.md)
 - [GooglePlayAndroidDeveloperApi.AppDetails](docs/AppDetails.md)
 - [GooglePlayAndroidDeveloperApi.AppEdit](docs/AppEdit.md)
 - [GooglePlayAndroidDeveloperApi.AppRecoveryAction](docs/AppRecoveryAction.md)
 - [GooglePlayAndroidDeveloperApi.AppVersionList](docs/AppVersionList.md)
 - [GooglePlayAndroidDeveloperApi.AppVersionRange](docs/AppVersionRange.md)
 - [GooglePlayAndroidDeveloperApi.AssetModuleMetadata](docs/AssetModuleMetadata.md)
 - [GooglePlayAndroidDeveloperApi.AssetSliceSet](docs/AssetSliceSet.md)
 - [GooglePlayAndroidDeveloperApi.AutoRenewingBasePlanType](docs/AutoRenewingBasePlanType.md)
 - [GooglePlayAndroidDeveloperApi.AutoRenewingPlan](docs/AutoRenewingPlan.md)
 - [GooglePlayAndroidDeveloperApi.BasePlan](docs/BasePlan.md)
 - [GooglePlayAndroidDeveloperApi.BatchGetSubscriptionOffersRequest](docs/BatchGetSubscriptionOffersRequest.md)
 - [GooglePlayAndroidDeveloperApi.BatchGetSubscriptionOffersResponse](docs/BatchGetSubscriptionOffersResponse.md)
 - [GooglePlayAndroidDeveloperApi.BatchGetSubscriptionsResponse](docs/BatchGetSubscriptionsResponse.md)
 - [GooglePlayAndroidDeveloperApi.BatchMigrateBasePlanPricesRequest](docs/BatchMigrateBasePlanPricesRequest.md)
 - [GooglePlayAndroidDeveloperApi.BatchMigrateBasePlanPricesResponse](docs/BatchMigrateBasePlanPricesResponse.md)
 - [GooglePlayAndroidDeveloperApi.BatchUpdateBasePlanStatesRequest](docs/BatchUpdateBasePlanStatesRequest.md)
 - [GooglePlayAndroidDeveloperApi.BatchUpdateBasePlanStatesResponse](docs/BatchUpdateBasePlanStatesResponse.md)
 - [GooglePlayAndroidDeveloperApi.BatchUpdateSubscriptionOfferStatesRequest](docs/BatchUpdateSubscriptionOfferStatesRequest.md)
 - [GooglePlayAndroidDeveloperApi.BatchUpdateSubscriptionOfferStatesResponse](docs/BatchUpdateSubscriptionOfferStatesResponse.md)
 - [GooglePlayAndroidDeveloperApi.BatchUpdateSubscriptionOffersRequest](docs/BatchUpdateSubscriptionOffersRequest.md)
 - [GooglePlayAndroidDeveloperApi.BatchUpdateSubscriptionOffersResponse](docs/BatchUpdateSubscriptionOffersResponse.md)
 - [GooglePlayAndroidDeveloperApi.BatchUpdateSubscriptionsRequest](docs/BatchUpdateSubscriptionsRequest.md)
 - [GooglePlayAndroidDeveloperApi.BatchUpdateSubscriptionsResponse](docs/BatchUpdateSubscriptionsResponse.md)
 - [GooglePlayAndroidDeveloperApi.Bundle](docs/Bundle.md)
 - [GooglePlayAndroidDeveloperApi.BundlesListResponse](docs/BundlesListResponse.md)
 - [GooglePlayAndroidDeveloperApi.CancelSurveyResult](docs/CancelSurveyResult.md)
 - [GooglePlayAndroidDeveloperApi.CanceledStateContext](docs/CanceledStateContext.md)
 - [GooglePlayAndroidDeveloperApi.Comment](docs/Comment.md)
 - [GooglePlayAndroidDeveloperApi.ConvertRegionPricesRequest](docs/ConvertRegionPricesRequest.md)
 - [GooglePlayAndroidDeveloperApi.ConvertRegionPricesResponse](docs/ConvertRegionPricesResponse.md)
 - [GooglePlayAndroidDeveloperApi.ConvertedOtherRegionsPrice](docs/ConvertedOtherRegionsPrice.md)
 - [GooglePlayAndroidDeveloperApi.ConvertedRegionPrice](docs/ConvertedRegionPrice.md)
 - [GooglePlayAndroidDeveloperApi.CountryTargeting](docs/CountryTargeting.md)
 - [GooglePlayAndroidDeveloperApi.CreateDraftAppRecoveryRequest](docs/CreateDraftAppRecoveryRequest.md)
 - [GooglePlayAndroidDeveloperApi.DeactivateBasePlanRequest](docs/DeactivateBasePlanRequest.md)
 - [GooglePlayAndroidDeveloperApi.DeactivateSubscriptionOfferRequest](docs/DeactivateSubscriptionOfferRequest.md)
 - [GooglePlayAndroidDeveloperApi.DeferredItemReplacement](docs/DeferredItemReplacement.md)
 - [GooglePlayAndroidDeveloperApi.DeobfuscationFile](docs/DeobfuscationFile.md)
 - [GooglePlayAndroidDeveloperApi.DeobfuscationFilesUploadResponse](docs/DeobfuscationFilesUploadResponse.md)
 - [GooglePlayAndroidDeveloperApi.DeveloperComment](docs/DeveloperComment.md)
 - [GooglePlayAndroidDeveloperApi.DeviceFeature](docs/DeviceFeature.md)
 - [GooglePlayAndroidDeveloperApi.DeviceFeatureTargeting](docs/DeviceFeatureTargeting.md)
 - [GooglePlayAndroidDeveloperApi.DeviceGroup](docs/DeviceGroup.md)
 - [GooglePlayAndroidDeveloperApi.DeviceId](docs/DeviceId.md)
 - [GooglePlayAndroidDeveloperApi.DeviceMetadata](docs/DeviceMetadata.md)
 - [GooglePlayAndroidDeveloperApi.DeviceRam](docs/DeviceRam.md)
 - [GooglePlayAndroidDeveloperApi.DeviceSelector](docs/DeviceSelector.md)
 - [GooglePlayAndroidDeveloperApi.DeviceSpec](docs/DeviceSpec.md)
 - [GooglePlayAndroidDeveloperApi.DeviceTier](docs/DeviceTier.md)
 - [GooglePlayAndroidDeveloperApi.DeviceTierConfig](docs/DeviceTierConfig.md)
 - [GooglePlayAndroidDeveloperApi.DeviceTierSet](docs/DeviceTierSet.md)
 - [GooglePlayAndroidDeveloperApi.ExpansionFile](docs/ExpansionFile.md)
 - [GooglePlayAndroidDeveloperApi.ExpansionFilesUploadResponse](docs/ExpansionFilesUploadResponse.md)
 - [GooglePlayAndroidDeveloperApi.ExternalAccountIdentifiers](docs/ExternalAccountIdentifiers.md)
 - [GooglePlayAndroidDeveloperApi.ExternalSubscription](docs/ExternalSubscription.md)
 - [GooglePlayAndroidDeveloperApi.ExternalTransaction](docs/ExternalTransaction.md)
 - [GooglePlayAndroidDeveloperApi.ExternalTransactionAddress](docs/ExternalTransactionAddress.md)
 - [GooglePlayAndroidDeveloperApi.ExternallyHostedApk](docs/ExternallyHostedApk.md)
 - [GooglePlayAndroidDeveloperApi.GeneratedApksListResponse](docs/GeneratedApksListResponse.md)
 - [GooglePlayAndroidDeveloperApi.GeneratedApksPerSigningKey](docs/GeneratedApksPerSigningKey.md)
 - [GooglePlayAndroidDeveloperApi.GeneratedAssetPackSlice](docs/GeneratedAssetPackSlice.md)
 - [GooglePlayAndroidDeveloperApi.GeneratedRecoveryApk](docs/GeneratedRecoveryApk.md)
 - [GooglePlayAndroidDeveloperApi.GeneratedSplitApk](docs/GeneratedSplitApk.md)
 - [GooglePlayAndroidDeveloperApi.GeneratedStandaloneApk](docs/GeneratedStandaloneApk.md)
 - [GooglePlayAndroidDeveloperApi.GeneratedUniversalApk](docs/GeneratedUniversalApk.md)
 - [GooglePlayAndroidDeveloperApi.GetSubscriptionOfferRequest](docs/GetSubscriptionOfferRequest.md)
 - [GooglePlayAndroidDeveloperApi.Grant](docs/Grant.md)
 - [GooglePlayAndroidDeveloperApi.Image](docs/Image.md)
 - [GooglePlayAndroidDeveloperApi.ImagesDeleteAllResponse](docs/ImagesDeleteAllResponse.md)
 - [GooglePlayAndroidDeveloperApi.ImagesListResponse](docs/ImagesListResponse.md)
 - [GooglePlayAndroidDeveloperApi.ImagesUploadResponse](docs/ImagesUploadResponse.md)
 - [GooglePlayAndroidDeveloperApi.InAppProduct](docs/InAppProduct.md)
 - [GooglePlayAndroidDeveloperApi.InAppProductListing](docs/InAppProductListing.md)
 - [GooglePlayAndroidDeveloperApi.InappproductsBatchDeleteRequest](docs/InappproductsBatchDeleteRequest.md)
 - [GooglePlayAndroidDeveloperApi.InappproductsBatchGetResponse](docs/InappproductsBatchGetResponse.md)
 - [GooglePlayAndroidDeveloperApi.InappproductsBatchUpdateRequest](docs/InappproductsBatchUpdateRequest.md)
 - [GooglePlayAndroidDeveloperApi.InappproductsBatchUpdateResponse](docs/InappproductsBatchUpdateResponse.md)
 - [GooglePlayAndroidDeveloperApi.InappproductsDeleteRequest](docs/InappproductsDeleteRequest.md)
 - [GooglePlayAndroidDeveloperApi.InappproductsListResponse](docs/InappproductsListResponse.md)
 - [GooglePlayAndroidDeveloperApi.InappproductsUpdateRequest](docs/InappproductsUpdateRequest.md)
 - [GooglePlayAndroidDeveloperApi.InternalAppSharingArtifact](docs/InternalAppSharingArtifact.md)
 - [GooglePlayAndroidDeveloperApi.IntroductoryPriceInfo](docs/IntroductoryPriceInfo.md)
 - [GooglePlayAndroidDeveloperApi.LanguageTargeting](docs/LanguageTargeting.md)
 - [GooglePlayAndroidDeveloperApi.ListAppRecoveriesResponse](docs/ListAppRecoveriesResponse.md)
 - [GooglePlayAndroidDeveloperApi.ListDeviceTierConfigsResponse](docs/ListDeviceTierConfigsResponse.md)
 - [GooglePlayAndroidDeveloperApi.ListSubscriptionOffersResponse](docs/ListSubscriptionOffersResponse.md)
 - [GooglePlayAndroidDeveloperApi.ListSubscriptionsResponse](docs/ListSubscriptionsResponse.md)
 - [GooglePlayAndroidDeveloperApi.ListUsersResponse](docs/ListUsersResponse.md)
 - [GooglePlayAndroidDeveloperApi.Listing](docs/Listing.md)
 - [GooglePlayAndroidDeveloperApi.ListingsListResponse](docs/ListingsListResponse.md)
 - [GooglePlayAndroidDeveloperApi.LocalizedText](docs/LocalizedText.md)
 - [GooglePlayAndroidDeveloperApi.ManagedProductTaxAndComplianceSettings](docs/ManagedProductTaxAndComplianceSettings.md)
 - [GooglePlayAndroidDeveloperApi.MigrateBasePlanPricesRequest](docs/MigrateBasePlanPricesRequest.md)
 - [GooglePlayAndroidDeveloperApi.ModuleMetadata](docs/ModuleMetadata.md)
 - [GooglePlayAndroidDeveloperApi.ModuleTargeting](docs/ModuleTargeting.md)
 - [GooglePlayAndroidDeveloperApi.Money](docs/Money.md)
 - [GooglePlayAndroidDeveloperApi.MultiAbi](docs/MultiAbi.md)
 - [GooglePlayAndroidDeveloperApi.MultiAbiTargeting](docs/MultiAbiTargeting.md)
 - [GooglePlayAndroidDeveloperApi.OfferDetails](docs/OfferDetails.md)
 - [GooglePlayAndroidDeveloperApi.OfferTag](docs/OfferTag.md)
 - [GooglePlayAndroidDeveloperApi.OneTimeExternalTransaction](docs/OneTimeExternalTransaction.md)
 - [GooglePlayAndroidDeveloperApi.OtherRegionsBasePlanConfig](docs/OtherRegionsBasePlanConfig.md)
 - [GooglePlayAndroidDeveloperApi.OtherRegionsSubscriptionOfferConfig](docs/OtherRegionsSubscriptionOfferConfig.md)
 - [GooglePlayAndroidDeveloperApi.OtherRegionsSubscriptionOfferPhaseConfig](docs/OtherRegionsSubscriptionOfferPhaseConfig.md)
 - [GooglePlayAndroidDeveloperApi.OtherRegionsSubscriptionOfferPhasePrices](docs/OtherRegionsSubscriptionOfferPhasePrices.md)
 - [GooglePlayAndroidDeveloperApi.PageInfo](docs/PageInfo.md)
 - [GooglePlayAndroidDeveloperApi.PartialRefund](docs/PartialRefund.md)
 - [GooglePlayAndroidDeveloperApi.PausedStateContext](docs/PausedStateContext.md)
 - [GooglePlayAndroidDeveloperApi.PrepaidBasePlanType](docs/PrepaidBasePlanType.md)
 - [GooglePlayAndroidDeveloperApi.PrepaidPlan](docs/PrepaidPlan.md)
 - [GooglePlayAndroidDeveloperApi.Price](docs/Price.md)
 - [GooglePlayAndroidDeveloperApi.ProductPurchase](docs/ProductPurchase.md)
 - [GooglePlayAndroidDeveloperApi.ProductPurchasesAcknowledgeRequest](docs/ProductPurchasesAcknowledgeRequest.md)
 - [GooglePlayAndroidDeveloperApi.RecurringExternalTransaction](docs/RecurringExternalTransaction.md)
 - [GooglePlayAndroidDeveloperApi.RefundExternalTransactionRequest](docs/RefundExternalTransactionRequest.md)
 - [GooglePlayAndroidDeveloperApi.RegionalBasePlanConfig](docs/RegionalBasePlanConfig.md)
 - [GooglePlayAndroidDeveloperApi.RegionalPriceMigrationConfig](docs/RegionalPriceMigrationConfig.md)
 - [GooglePlayAndroidDeveloperApi.RegionalSubscriptionOfferConfig](docs/RegionalSubscriptionOfferConfig.md)
 - [GooglePlayAndroidDeveloperApi.RegionalSubscriptionOfferPhaseConfig](docs/RegionalSubscriptionOfferPhaseConfig.md)
 - [GooglePlayAndroidDeveloperApi.RegionalTaxRateInfo](docs/RegionalTaxRateInfo.md)
 - [GooglePlayAndroidDeveloperApi.Regions](docs/Regions.md)
 - [GooglePlayAndroidDeveloperApi.RegionsVersion](docs/RegionsVersion.md)
 - [GooglePlayAndroidDeveloperApi.RemoteInAppUpdate](docs/RemoteInAppUpdate.md)
 - [GooglePlayAndroidDeveloperApi.RemoteInAppUpdateData](docs/RemoteInAppUpdateData.md)
 - [GooglePlayAndroidDeveloperApi.RemoteInAppUpdateDataPerBundle](docs/RemoteInAppUpdateDataPerBundle.md)
 - [GooglePlayAndroidDeveloperApi.Review](docs/Review.md)
 - [GooglePlayAndroidDeveloperApi.ReviewReplyResult](docs/ReviewReplyResult.md)
 - [GooglePlayAndroidDeveloperApi.ReviewsListResponse](docs/ReviewsListResponse.md)
 - [GooglePlayAndroidDeveloperApi.ReviewsReplyRequest](docs/ReviewsReplyRequest.md)
 - [GooglePlayAndroidDeveloperApi.ReviewsReplyResponse](docs/ReviewsReplyResponse.md)
 - [GooglePlayAndroidDeveloperApi.RevocationContext](docs/RevocationContext.md)
 - [GooglePlayAndroidDeveloperApi.RevokeSubscriptionPurchaseRequest](docs/RevokeSubscriptionPurchaseRequest.md)
 - [GooglePlayAndroidDeveloperApi.SafetyLabelsUpdateRequest](docs/SafetyLabelsUpdateRequest.md)
 - [GooglePlayAndroidDeveloperApi.ScreenDensity](docs/ScreenDensity.md)
 - [GooglePlayAndroidDeveloperApi.ScreenDensityTargeting](docs/ScreenDensityTargeting.md)
 - [GooglePlayAndroidDeveloperApi.SdkVersion](docs/SdkVersion.md)
 - [GooglePlayAndroidDeveloperApi.SdkVersionTargeting](docs/SdkVersionTargeting.md)
 - [GooglePlayAndroidDeveloperApi.SplitApkMetadata](docs/SplitApkMetadata.md)
 - [GooglePlayAndroidDeveloperApi.SplitApkVariant](docs/SplitApkVariant.md)
 - [GooglePlayAndroidDeveloperApi.StandaloneApkMetadata](docs/StandaloneApkMetadata.md)
 - [GooglePlayAndroidDeveloperApi.SubscribeWithGoogleInfo](docs/SubscribeWithGoogleInfo.md)
 - [GooglePlayAndroidDeveloperApi.Subscription](docs/Subscription.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionCancelSurveyResult](docs/SubscriptionCancelSurveyResult.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionDeferralInfo](docs/SubscriptionDeferralInfo.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionItemPriceChangeDetails](docs/SubscriptionItemPriceChangeDetails.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionListing](docs/SubscriptionListing.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionOffer](docs/SubscriptionOffer.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionOfferPhase](docs/SubscriptionOfferPhase.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionOfferTargeting](docs/SubscriptionOfferTargeting.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionPriceChange](docs/SubscriptionPriceChange.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionPurchase](docs/SubscriptionPurchase.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionPurchaseLineItem](docs/SubscriptionPurchaseLineItem.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionPurchaseV2](docs/SubscriptionPurchaseV2.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionPurchasesAcknowledgeRequest](docs/SubscriptionPurchasesAcknowledgeRequest.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionPurchasesDeferRequest](docs/SubscriptionPurchasesDeferRequest.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionPurchasesDeferResponse](docs/SubscriptionPurchasesDeferResponse.md)
 - [GooglePlayAndroidDeveloperApi.SubscriptionTaxAndComplianceSettings](docs/SubscriptionTaxAndComplianceSettings.md)
 - [GooglePlayAndroidDeveloperApi.SystemApkOptions](docs/SystemApkOptions.md)
 - [GooglePlayAndroidDeveloperApi.SystemApksListResponse](docs/SystemApksListResponse.md)
 - [GooglePlayAndroidDeveloperApi.SystemFeature](docs/SystemFeature.md)
 - [GooglePlayAndroidDeveloperApi.Targeting](docs/Targeting.md)
 - [GooglePlayAndroidDeveloperApi.TargetingInfo](docs/TargetingInfo.md)
 - [GooglePlayAndroidDeveloperApi.TargetingRuleScope](docs/TargetingRuleScope.md)
 - [GooglePlayAndroidDeveloperApi.TargetingUpdate](docs/TargetingUpdate.md)
 - [GooglePlayAndroidDeveloperApi.Testers](docs/Testers.md)
 - [GooglePlayAndroidDeveloperApi.TextureCompressionFormat](docs/TextureCompressionFormat.md)
 - [GooglePlayAndroidDeveloperApi.TextureCompressionFormatTargeting](docs/TextureCompressionFormatTargeting.md)
 - [GooglePlayAndroidDeveloperApi.Timestamp](docs/Timestamp.md)
 - [GooglePlayAndroidDeveloperApi.TokenPagination](docs/TokenPagination.md)
 - [GooglePlayAndroidDeveloperApi.Track](docs/Track.md)
 - [GooglePlayAndroidDeveloperApi.TrackConfig](docs/TrackConfig.md)
 - [GooglePlayAndroidDeveloperApi.TrackCountryAvailability](docs/TrackCountryAvailability.md)
 - [GooglePlayAndroidDeveloperApi.TrackRelease](docs/TrackRelease.md)
 - [GooglePlayAndroidDeveloperApi.TrackTargetedCountry](docs/TrackTargetedCountry.md)
 - [GooglePlayAndroidDeveloperApi.TracksListResponse](docs/TracksListResponse.md)
 - [GooglePlayAndroidDeveloperApi.UpdateBasePlanStateRequest](docs/UpdateBasePlanStateRequest.md)
 - [GooglePlayAndroidDeveloperApi.UpdateSubscriptionOfferRequest](docs/UpdateSubscriptionOfferRequest.md)
 - [GooglePlayAndroidDeveloperApi.UpdateSubscriptionOfferStateRequest](docs/UpdateSubscriptionOfferStateRequest.md)
 - [GooglePlayAndroidDeveloperApi.UpdateSubscriptionRequest](docs/UpdateSubscriptionRequest.md)
 - [GooglePlayAndroidDeveloperApi.UpgradeTargetingRule](docs/UpgradeTargetingRule.md)
 - [GooglePlayAndroidDeveloperApi.User](docs/User.md)
 - [GooglePlayAndroidDeveloperApi.UserComment](docs/UserComment.md)
 - [GooglePlayAndroidDeveloperApi.UserCountriesTargeting](docs/UserCountriesTargeting.md)
 - [GooglePlayAndroidDeveloperApi.UserCountrySet](docs/UserCountrySet.md)
 - [GooglePlayAndroidDeveloperApi.UserInitiatedCancellation](docs/UserInitiatedCancellation.md)
 - [GooglePlayAndroidDeveloperApi.UsesPermission](docs/UsesPermission.md)
 - [GooglePlayAndroidDeveloperApi.Variant](docs/Variant.md)
 - [GooglePlayAndroidDeveloperApi.VariantTargeting](docs/VariantTargeting.md)
 - [GooglePlayAndroidDeveloperApi.VoidedPurchase](docs/VoidedPurchase.md)
 - [GooglePlayAndroidDeveloperApi.VoidedPurchasesListResponse](docs/VoidedPurchasesListResponse.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/androidpublisher: View and manage your Google Play Developer account

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/androidpublisher: View and manage your Google Play Developer account

